# genn-network-model

./: .gitignore  01_protocol.py  Dockerfile  README.md  __init__.py  comparing_cluster_correlation.sh  correlation_statistics.csv  default.nix  docker.nix  draw_connectivity.py  first_protocol.py  genn-setup.patch  launch_simulations.sh  network.py  neuron.py  neurons  notes.md  odors.py  output.tex  pearson_all_conditions.sh  plot.py  profile.pstats  protocol.py  protocols.py  reading_parameters.py  recorder.py  requirements.txt  second_protocol.py  setup.cfg  shell.nix  sim.sh  simulation.py  synapse.py  test.gv  test.json  test.tex  test_protocol.py  third_protocol.py
Test_CODE/: customUpdate.d  customUpdateCUDA1.sha  definitions.h  definitionsInternal.h  init.cc  init.d  initCUDA0.sha  initCUDA1.sha  model.sha  neuronUpdate.cc  neuronUpdate.d  neuronUpdateCUDA0.sha  neuronUpdateCUDA1.sha  runner.cc  runner.d  synapseUpdate.cc  synapseUpdate.d  synapseUpdateCUDA0.sha  synapseUpdateCUDA1.sha
cluster/: README.md  halved_synapses.pbs  halved_synapses_correlation.pbs  halved_synapses_poisson.pbs  halved_synapses_poisson_correlation.pbs  halved_synapses_poisson_extract_feature.pbs  halved_synapses_poisson_sdf.pbs  halved_synapses_poisson_spikes.pbs  halved_synapses_sdf.pbs  halved_synapses_spikes.pbs  hundreth_synapses.pbs  hundreth_synapses_correlation.pbs  hundreth_synapses_poisson.pbs  hundreth_synapses_poisson_correlation.pbs  hundreth_synapses_poisson_extract_feature.pbs  hundreth_synapses_poisson_extract_features.pbs  hundreth_synapses_poisson_no_noise.pbs  hundreth_synapses_poisson_no_noise_correlation.pbs  hundreth_synapses_poisson_no_noise_sdf.pbs  (+33 more)
(+356 files in other folders)
