[metadata]
name = beegenn
version = 0.0.1
author = Giacomo Fantoni, Enrico Trombetta
author_email = Giacomo.Fantoni@studenti.unitn.it
description = Wrapper around Genn
long_description = file: README.md
keywords = genn, snn
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    importlib-metadata; python_version<"3.8"
    numpy
    setuptools
    matplotlib
    tables
    tqdm
    ipykernel
    networkx
    Pillow
    contourpy
    jsonschema
    pandas

[options.packages.find]
where=src
exclude =
    outputs
    data
    *_CODE
#    tools*
#    docs*
#    my_package.tests*


[options.entry_points]
console_scripts =
    executable-name = beegenn:function
