[metadata]
name = beegenn
version = 0.0.1
author = Giacomo Fantoni, Enrico Trombetta
author_email = Giacomo.Fantoni@studenti.unitn.it
description = Wrapper around Genn
long_description = file: README.md
keywords = genn, snn
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.10
package_dir =
    =src 
packages = find:

install_requires =
    importlib-metadata; python_version<"3.8"
    numpy
    setuptools
    matplotlib
    tables
    tqdm
    ipykernel
    networkx
    Pillow
    jsonschema
    pandas

[options.packages.find]
where = src
exclude =
    outputs
    data
    *_CODE

[options.entry_points]
console_scripts =
    executable-name = beegenn:function
